[package]
name = "combined-order-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.7", features = ["tls", "compression"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
crypto-ws-client = "4.11.3"
crypto-msg-parser = "*"
crypto-market-type = "*"
crypto-pair = "*"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
serde = "*"
serde_derive = "*"
serde_json = "*"
anyhow = "*"
prost = "0.10"
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost", "compression"] }
